--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "node .",
         "build": "tsc",
         "dev": "ts-node-dev --respawn --no-deps --rs --cls ./src/index.ts",
-        "eslint": "eslint src/**/*.ts"
+        "eslint": "eslint src/**/*.ts",
+        "prettier": "prettier --write src/**/*.ts"
     },
     "keywords": [
         "bsky-justwatched-bot",
@@ -23,16 +24,21 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "typescript": "4.9.4",
         "@types/node": "18.11.18",
-        "eslint": "8.30.0",
         "@typescript-eslint/eslint-plugin": "5.47.1",
         "@typescript-eslint/parser": "5.46.1",
+        "eslint": "8.30.0",
         "eslint-plugin-prettier": "4.2.1",
         "ts-node": "10.9.1",
-        "ts-node-dev": "2.0.0"
+        "ts-node-dev": "2.0.0",
+        "typescript": "4.9.4"
     },
     "dependencies": {
+        "@atproto/api": "^0.13.25",
+        "cron": "^3.3.2",
+        "dotenv": "^16.4.7",
+        "process": "^0.11.10",
+        "trakt.tv": "^8.2.0",
         "winston": "3.8.2"
     }
 }
